Fix width on mobile

--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ form {
 
 	input,
 	select {
+		width: 100%;
 		height: 3rem;
 		padding: 1rem;
 		border-radius: 1rem;
